# fastapi-skeleton

./: .flake8  README.md  docker-compose.yml  pyproject.toml
app/: main.py
tests/integration/: test_main.py
