[project]
name = "fastapi-rag-mongodb-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Moinuddin Masud",email = "moinuddinmasud@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
bandit = "^1.8.5"
safety = "^3.5.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
